# scoring

./: .pre-commit-config.yaml  .vercelignore  2025 Scores.xlsx  2026_draft.json  CONTRIBUTING.md  Drafts.xlsx  NEW_SEASON_CHECKLIST.md  PHASE1_IMPROVEMENTS.md  README.md  Rosters.xlsx  TODO.md  Traded Picks.xlsx  autoscorer.py  autoscorer_json.py  pyproject.toml  schedule.txt  score_mismatches.txt  scoring_rules.py  test_api_updating.py  validate_scores.py  vercel.json
.github/workflows/: expire-trades.yml  (+7 more)
api/: lineup.py  nfl-draft.py  pyproject.toml  requirements.txt  rule-changes.py  team-avatar.py  team-name.py  transaction.py
data/: avatars.json  draft_orders.json  draft_picks.json  drafts.json  fa_pool.json  league_config.json  name_battles.json  nfl_draft_challenge.json  pending_trades.json  rosters.json  rule_proposals.json  team_names.json  teams.json  trade_blocks.json  transaction_log.json
docs/: 2025 Schedule.docx  2025 Standings.docx  2026_SEASON_CHANGES.md  API.md  ARCHITECTURE.md  Banner Room.docx  Constitution of the QPFL.docx  QPFL Hall of Fame.docx  Transactions.docx
previous_seasons/: 2020 Final Standings.docx  2020 Scores.xlsx  2021 Final Standings .docx  2021 Schedule.docx  2021 Scores.xlsx  2022 Final Standings.docx  2022 Scores.xlsx  2023 Final Standings.docx  2023 Schedule.docx  2023 Scores.xlsx  2024 Final Standings.docx  2024 Schedule.docx  2024 Scores.xlsx  Schedule.docx
qpfl/: __init__.py  avatars.py  base_scorer.py  config.py  constants.py  data_fetcher.py  excel_parser.py  json_scorer.py  logging_config.py  models.py  name_battles.py  roster_sync.py  schedule.py  schemas.py  scorer.py  scoring.py  utils.py  validators.py
scripts/: create_new_season.py  create_performance_conditional.py  create_position_conditional.py  export_current.py  export_for_web.py  export_hall_of_fame.py  export_historical.py  fix_historical_scores.py  init_rosters_from_excel.py  migrate_to_json.py  sync_drafts_from_excel.py  sync_lineups_to_excel.py  sync_rosters.py  sync_rosters_to_excel.py  update_player_teams.py  update_trade_blocks.py  validate_scores.py
tests/: __init__.py  test_api.py  test_avatars.py  test_integration.py  test_name_battles.py  test_scoring.py  test_validators.py
web/: app.js  data.json  data_2020.json  data_2021.json  data_2022.json  data_2023.json  data_2024.json  data_2025.json  index.html  preview.html  styles.css
(+156 files in other folders)
