[project]
name = "qpfl-autoscorer"
version = "1.0.0"
description = "Automated fantasy football scoring for QPFL using nflreadpy"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1.5",
    "polars>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-docx>=1.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
qpfl-score = "autoscorer:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function call in argument defaults
    "C901",   # too complex (we'll handle this gradually)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports and redefined names in tests

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qpfl.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["qpfl*"]
